--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	northernwidget/DS3231@^1.1.2
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	forntoh/LcdMenu@^5.0.0
+	madleech/Button@^1.0.0
