--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,10 @@
 
 [env:nanoatmega328]
 platform = atmelavr
-board = nanoatmega328
 framework = arduino
+board = nanoatmega328
+board_build.mcu = atmega328p
+board_build.f_cpu = 16000000L
 lib_deps = 
 	northernwidget/DS3231@^1.1.2
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
